Updated API and swagger.yaml
