# FotoQuestGo.DataSubmissionService/Handlers/SubmissionCommandService.cs
@@ -2,7 +2,9 @@
 using FotoQuestGo.DataSubmissionService.Interfaces;
 using FotoQuestGoRepository.Models;
 using FotoQuestGoRepository.UnitOfWork;
+using Microsoft.AspNetCore.Http;
 using System.Collections.Generic;
+using System.Linq;
 using System.Threading.Tasks;
 
 namespace FotoQuestGo.DataSubmissionService.Handlers
@@ -23,25 +25,26 @@ namespace FotoQuestGo.DataSubmissionService.Handlers
 
         public ValidationResult IsValid(SubmissionViewModel submissionViewModel)
         {
+            //TODO need to add validation here
             return new ValidationResult { IsValid = true , ErrorMessage = string.Empty};
         }
 
-        public async Task SaveSubmission(SubmissionViewModel submissionViewModel)
+        public async Task<SubmissionViewModel> SaveSubmission(SubmissionViewModel submissionViewModel, ICollection<IFormFile> files)
         {
             var data = _mapper.Map<SubmissionData>(submissionViewModel);
 
-            var imageList = new List<ImageDetails>();
-            foreach (var imageFile in submissionViewModel.ImageList)
+            var detailsList = data.ImageList.ToList();
+            foreach (var file in files)
             {
-                var image = _mapper.Map<ImageDetails>(imageFile);
-                image.FileName = imageFile.File.FileName;
-                await _imageHandler.SaveImage(imageFile.Id.Value,imageFile.File);
+                var image = detailsList.First(x=>x.FileName == file.Name);
+                var imageDetailResult = await _submissionUnitOfWork.ImageDetailsRepository.AddAsync(image);
+                await _imageHandler.SaveImage(imageDetailResult.Id,file);
             }
-
-            await _submissionUnitOfWork.QuestionnaireDataRepository.AddRangeAsync(data.Questionnaire);
-            await _submissionUnitOfWork.ImageDetailsRepository.AddRangeAsync(data.ImageList);
-            await _submissionUnitOfWork.SubmissionDataRepository.AddAsync(data);
+            await _submissionUnitOfWork.QuestionnaireDataRepository.AddRangeAsync(data.Questionnaire);            
+            var submissionData = await _submissionUnitOfWork.SubmissionDataRepository.AddAsync(data);
             await _submissionUnitOfWork.CompleteAsync();
+
+            return _mapper.Map<SubmissionViewModel>(submissionData);
         }
     }
 }
